--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "axios": "^0.20.0",
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "mysql2": "^2.1.0",
+    "sequelize": "^6.3.4"
   }
 }
