--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "dependencies": {
     "axios": "^0.20.0",
     "express": "^4.16.3",
+    "express-jwt": "^6.0.0",
+    "express-jwt-authz": "^2.4.1",
     "if-env": "^1.0.4",
+    "jwks-rsa": "^1.9.0",
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.4"
   }
