--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.0.0",
     "react": "^16.6.3",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.6.3",
     "react-scripts": "^2.1.1"
   },
