--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jwks-rsa": "^1.9.0",
     "mysql2": "^2.1.0",
     "react-router-dom": "^5.2.0",
-    "sequelize": "^6.3.4"
+    "sequelize": "^6.3.4",
+    "sequelize-cli": "^6.2.0"
   }
 }
