--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mysql2": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "sequelize": "^6.3.4",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "socket.io": "^2.3.0"
   }
 }
