--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.16.3",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
