--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.16.3",
+    "express-fileupload": "^1.2.0",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
     "if-env": "^1.0.4",
