--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "aws-sdk": "^2.751.0",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "express-fileupload": "^1.2.0",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
+    "fs": "0.0.1-security",
     "if-env": "^1.0.4",
     "jwks-rsa": "^1.9.0",
     "mysql2": "^2.1.0",
