--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-fileupload": "^1.2.0",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
+    "fs": "0.0.1-security",
     "if-env": "^1.0.4",
     "jwks-rsa": "^1.9.0",
     "mysql2": "^2.1.0",
