--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "HELLO",
+    "password": "22087005552493",
     "database": "sequelize_library",
     "host": "127.0.0.1",
     "port": 3306,
